--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_API_URL = "http://localhost:3000/clientes"
+VITE_API_URL = "https://my-json-server.typicode.com/edmblue/clientes-crm-rrd/clientes"
